--- a/src/main/resources/templates/brickollect/index.html
+++ b/src/main/resources/templates/brickollect/index.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
-<body>
+<body class="container">
 
-    <h1>Welcome To Brickollect!</h1>
+<h1>Welcome to Brickollect</h1>
+
+<nav th:replace="fragments :: navigation"></nav>
 
 </body>
 </html>
