Put welcome text and button in jumbotron on homepage , removed placeholder text

--- a/src/main/resources/templates/brickollect/index.html
+++ b/src/main/resources/templates/brickollect/index.html
@@ -2,30 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
-<body class="container">
+<body>
 
 
 <nav th:replace="fragments :: navigation"></nav>
-<div class="container-fluid" style="margin-top:50px; height:1000px">
-    <h1>Welcome To Brickollect!</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in pulvinar ante, et condimentum nisi.Aliquam
-        porttitor id purus nec elementum. Nullam lorem lectus, mattis non velit id, eleifend vulputate nibh.Sed ut
-        euismod velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-        Curabitur sed magna consequat, semper augue vitae, maximus nisl. Ut vel ante quis mauris tempus gravida. Aliquam
-        nisi ipsum, finibus sit amet augue id, scelerisque ultricies justo. Praesent pharetra mauris vitae vehicula
-        ultricies. Vestibulum tempor velit in consectetur viverra. Suspendisse pharetra vestibulum aliquet. Nunc lobortis
-        urna vel luctus scelerisque. Morbi vehicula massa velit, ac rhoncus nunc faucibus in.</p>
-    <p>Phasellus condimentum aliquet libero. In tincidunt accumsan turpis, quis tempor orci egestas a.Praesent maximus
-        porttitor felis. Duis eget orci magna. Sed ac arcu nunc. Sed tincidunt malesuada ex eget sagittis. Integer ac
-        consectetur ex. Proin risus dolor, pharetra et quam vitae, gravida maximus tortor. Nam urna mauris, suscipit et
-        ipsum in, vestibulum imperdiet odio.</p>
-    <p>Nulla lobortis nulla quis metus mollis, id ultricies sem faucibus. Mauris in tellus nec velit tincidunt molestie
-        at sed ligula. Nam maximus consectetur placerat. Suspendisse fermentum ultrices sagittis. Ut pharetra condimentum
-        fringilla. Donec dignissim vitae dui vel blandit. Cras non pellentesque sapien, nec imperdiet diam. Donec sit
-        amet dolor lorem. Morbi in sem sit amet ex molestie tristique. Donec leo augue, mattis a auctor euismod, euismod
-        in mauris. Morbi eu est lectus. Vestibulum ipsum tortor, eleifend vitae sollicitudin in, tincidunt eget arcu.
-        Integer mollis, odio nec commodo tempor, libero nunc molestie mi, a feugiat augue turpis vitae ante. Morbi non
-        efficitur odio.</p>
+<div class="jumbotron" style="margin-top:20px">
+    <h1 class="text-center">Rethink your sets,<br/>one brick at a time...</h1>
+    <div class="text-center">
+        <a href="#" class="btn btn-default" role="button">Brick Stuff Up</a>
+    </div>
 </div>
 
 </body>
