Placeholder images set up on index page, styling added to fragments.html to handle image placement on index page

--- a/src/main/resources/templates/brickollect/index.html
+++ b/src/main/resources/templates/brickollect/index.html
@@ -12,6 +12,96 @@
         <a href="#" class="btn btn-default" role="button">Brick Stuff Up</a>
     </div>
 </div>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-10271/buildme/early-porsche-911/" sl-processed="1">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/ef/a3/efa3bde23a7ebb36dffe1be770669942.jpg?1512901284.952062" width="180" height="144" title="Early Porsche 911"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-10967/De_Marco/firehouse-headquarters-ghostbusters/" sl-processed="1">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/60/24/6024100898bb8a6e851075785260b862.jpg?1512901286.272056" width="180" height="144" title="Firehouse Headquarters (Ghostbusters)"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-10803/martijnnab/classic-jaguar-roadster-rc-version/" sl-processed="1">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/58/6e/586e15ca30338f9e33d031e24919c242.jpg?1512901291.172035" width="180" height="144" title="Classic Jaguar Roadster RC version"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-11389/Kristel/cast-iron-modular-building/" sl-processed="1">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/29/88/2988de2bc16b30f4347bf47f15712614.jpg?1512907275.3862638" width="180" height="144" title="Cast Iron Modular Building"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-7631/Nequmodiva/31058-elephant/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/80/33/80335e13f6e525b9b2e8f56cd406bdd8.jpg?1512904046.7335284" width="180" height="144" title="31058 Elephant"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-5266/Echaton/8-wheel-octane-tanker/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/bb/96/bb96e5c9fcbf3983744957510295366d.jpg?1512919271.0006971" width="180" height="144" title="8-Wheel Octane Tanker"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-3918/Artemy Zotov/lamborghini-gallardo-super-trofeo-stradale/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/54/b6/54b675f54eb9b3c67f980596e456defe.jpg?1512904628.0710511" width="180" height="144" title="Lamborghini Gallardo Super Trofeo Stradale"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-4703/Tritri/ubernes/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/b8/77/b8776df585efd67f3dad0073fc5757f4.jpg?1512928601.5804765" width="180" height="144" title="UberNES"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-0505/2013-lego/brickstreet/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/aa/81/aa81f9abe2836293db5e2360bd0792f5.jpg?1512904250.4359992" width="180" height="144" title="Brickstreet"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-2770/Rm8/toyota-land-cruiser-fj40-hard-top-expedition/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/cc/57/cc5735f722a61f3d0f774515fa8547fd.jpg?1512928550.5673673" width="180" height="144" title="Toyota Land Cruiser FJ40 HARD TOP Expedition"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-0037/grohl/saab-ja-37-viggen/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/c7/8e/c78ececd0f8b6c598618fc37fcf22447.jpg?1512919319.8738198" width="180" height="144" title="SAAB JA-37 Viggen"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3 col-md-2 col-condensed margin-bottom-15" style="padding: 0">
+                <a href="https://rebrickable.com/mocs/MOC-9538/NKubate/10242-f1-racer/">
+                    <div class="text-center">
+                        <img class="img-responsive" src="https://m.rebrickable.com/media/cache/db/de/dbde5842ef0127061893330f7625f475.jpg?1512922942.7350655" width="180" height="144" title="10242 F1 Racer"/>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
